--- a/CA3/Q1.ipynb
+++ b/CA3/Q1.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fe7d244e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'%.3f'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "%precision 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9b50d6c8",
    "metadata": {},
    "outputs": [
@@ -23,12 +35,41 @@
      "text": [
       "WARNING: Using incubator modules: jdk.incubator.vector\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
-      "25/12/23 18:56:06 WARN Utils: Your hostname, mahdi-laptop, resolves to a loopback address: 127.0.1.1; using 172.17.71.223 instead (on interface wlo1)\n",
-      "25/12/23 18:56:06 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/12/25 09:18:53 WARN Utils: Your hostname, mahdi-laptop, resolves to a loopback address: 127.0.1.1; using 172.16.157.201 instead (on interface wlo1)\n",
+      "25/12/25 09:18:53 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/12/23 18:56:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/12/25 09:18:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Exception occurred during processing of request from ('127.0.0.1', 53066)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.12/socketserver.py\", line 318, in _handle_request_noblock\n",
+      "    self.process_request(request, client_address)\n",
+      "  File \"/usr/lib/python3.12/socketserver.py\", line 349, in process_request\n",
+      "    self.finish_request(request, client_address)\n",
+      "  File \"/usr/lib/python3.12/socketserver.py\", line 362, in finish_request\n",
+      "    self.RequestHandlerClass(request, client_address, self)\n",
+      "  File \"/usr/lib/python3.12/socketserver.py\", line 761, in __init__\n",
+      "    self.handle()\n",
+      "  File \"/home/mvajhi/.local/lib/python3.12/site-packages/pyspark/accumulators.py\", line 303, in handle\n",
+      "    poll(accum_updates)\n",
+      "  File \"/home/mvajhi/.local/lib/python3.12/site-packages/pyspark/accumulators.py\", line 272, in poll\n",
+      "    if self.rfile in r and func():\n",
+      "                           ^^^^^^\n",
+      "  File \"/home/mvajhi/.local/lib/python3.12/site-packages/pyspark/accumulators.py\", line 276, in accum_updates\n",
+      "    num_updates = read_int(self.rfile)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/mvajhi/.local/lib/python3.12/site-packages/pyspark/serializers.py\", line 597, in read_int\n",
+      "    raise EOFError\n",
+      "EOFError\n",
+      "----------------------------------------\n"
      ]
     }
    ],
@@ -50,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "869fbb67",
    "metadata": {},
    "outputs": [
@@ -119,23 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "e77629f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('\"Warhammer 40', 124.69999999999999),\n",
-       " ('Grand Theft Auto V', 64.29),\n",
-       " (\"You Don't Know Jack\", 47.599999999999994),\n",
-       " ('Call of Duty: Black Ops', 30.990000000000002),\n",
-       " ('Call of Duty: Modern Warfare 3', 30.71),\n",
-       " ('Call of Duty: Black Ops II', 29.590000000000003),\n",
-       " ('Call of Duty: Ghosts', 28.800000000000004),\n",
-       " ('Call of Duty: Black Ops 3', 26.72),\n",
-       " ('Aggressive Inline', 26.610000000000003),\n",
-       " ('The Lord of the Rings: The Return of the King', 26.46)]"
+       "[('\"Warhammer 40', 124.700),\n",
+       " ('Grand Theft Auto V', 64.290),\n",
+       " (\"You Don't Know Jack\", 47.600),\n",
+       " ('Call of Duty: Black Ops', 30.990),\n",
+       " ('Call of Duty: Modern Warfare 3', 30.710),\n",
+       " ('Call of Duty: Black Ops II', 29.590),\n",
+       " ('Call of Duty: Ghosts', 28.800),\n",
+       " ('Call of Duty: Black Ops 3', 26.720),\n",
+       " ('Aggressive Inline', 26.610),\n",
+       " ('The Lord of the Rings: The Return of the King', 26.460)]"
       ]
      },
      "metadata": {},
@@ -185,59 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "dea7a411",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Action',\n",
-       "  (540.9100000000003,\n",
-       "   249.1300000000003,\n",
-       "   40.91000000000002,\n",
-       "   185.49,\n",
-       "   63.05000000000007)),\n",
-       " ('Shooter',\n",
-       "  (632.3900000000002,\n",
-       "   302.38000000000056,\n",
-       "   22.82000000000005,\n",
-       "   210.76000000000008,\n",
-       "   75.88000000000002)),\n",
-       " ('Sports',\n",
-       "  (395.73000000000025,\n",
-       "   137.72000000000006,\n",
-       "   31.35000000000007,\n",
-       "   168.14999999999998,\n",
-       "   58.650000000000034)),\n",
-       " ('Role-Playing',\n",
-       "  (232.67, 103.58999999999996, 47.33, 59.1, 22.690000000000097)),\n",
-       " ('Racing',\n",
-       "  (209.3700000000001,\n",
-       "   85.11999999999995,\n",
-       "   11.789999999999978,\n",
-       "   84.88999999999996,\n",
-       "   27.58000000000003)),\n",
-       " ('Fighting',\n",
-       "  (162.08999999999997,\n",
-       "   69.79999999999998,\n",
-       "   22.470000000000013,\n",
-       "   36.099999999999994,\n",
-       "   14.429999999999968)),\n",
-       " ('Adventure',\n",
-       "  (78.28000000000004,\n",
-       "   33.93000000000003,\n",
-       "   9.149999999999999,\n",
-       "   27.490000000000023,\n",
-       "   7.679999999999995)),\n",
-       " ('Music', (5.460000000000001, 3.2, 0.63, 1.03, 0.5700000000000002)),\n",
-       " ('Party', (16.25, 2.11, 0.83, 0.6000000000000001, 0.67)),\n",
-       " ('Action-Adventure',\n",
-       "  (91.71000000000004,\n",
-       "   35.959999999999994,\n",
-       "   4.129999999999997,\n",
-       "   38.94999999999999,\n",
-       "   12.659999999999991))]"
+       "[('Action', (540.910, 249.130, 40.910, 185.490, 63.050)),\n",
+       " ('Shooter', (632.390, 302.380, 22.820, 210.760, 75.880)),\n",
+       " ('Sports', (395.730, 137.720, 31.350, 168.150, 58.650)),\n",
+       " ('Role-Playing', (232.670, 103.590, 47.330, 59.100, 22.690)),\n",
+       " ('Racing', (209.370, 85.120, 11.790, 84.890, 27.580)),\n",
+       " ('Fighting', (162.090, 69.800, 22.470, 36.100, 14.430)),\n",
+       " ('Adventure', (78.280, 33.930, 9.150, 27.490, 7.680)),\n",
+       " ('Music', (5.460, 3.200, 0.630, 1.030, 0.570)),\n",
+       " ('Party', (16.250, 2.110, 0.830, 0.600, 0.670)),\n",
+       " ('Action-Adventure', (91.710, 35.960, 4.130, 38.950, 12.660))]"
       ]
      },
      "metadata": {},
@@ -276,18 +281,18 @@
     "        return list(map(float, x))\n",
     "\n",
     "    missing_idx = invalid_indices[0]\n",
-    "    calculated_value = 0.0\n",
+    "    calculated_value = 0\n",
     "\n",
     "    try:\n",
     "        if missing_idx == 0:\n",
-    "            current_sum = 0.0\n",
+    "            current_sum = 0\n",
     "            for i in range(1, len(x)):\n",
     "                current_sum += float(x[i])\n",
     "            calculated_value = current_sum\n",
     "\n",
     "        else:\n",
     "            total_sum = float(x[0])\n",
-    "            current_sum = 0.0\n",
+    "            current_sum = 0\n",
     "            for i in range(1, len(x)):\n",
     "                if i == missing_idx:\n",
     "                    continue\n",
@@ -304,8 +309,7 @@
     "genre_per_regen = raw_data.map(lambda x: (x[header['genre']], *x[7:12])) \\\n",
     "    .map(calc_sales_regen) \\\n",
     "    .filter(lambda x: x != None) \\\n",
-    "    .reduceByKey(lambda list1, list2: tuple(a + b for a, b in zip(list1, list2))) \\\n",
-    "    # .sortBy(lambda x: x[1], ascending=False)\n",
+    "    .reduceByKey(lambda list1, list2: tuple(a + b for a, b in zip(list1, list2)))\n",
     "    \n",
     "display(genre_per_regen.take(10))\n",
     "display(genre_per_regen.count())"
@@ -313,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "2fd55e88",
    "metadata": {},
    "outputs": [
@@ -321,7 +325,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_131192/2835966677.py:21: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "/home/mvajhi/.local/lib/python3.12/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n",
+      "/tmp/ipykernel_5354/2551066045.py:21: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  colors = plt.cm.get_cmap('tab10', num_regions)\n"
      ]
     },
@@ -387,23 +393,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "69fba98c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Rockstar Games', (13.94, 9.8)),\n",
-       " ('Naughty Dog', (20.14, 9.083333333333334)),\n",
-       " ('Rockstar North', (99.57000000000001, 9.060869565217393)),\n",
-       " ('Rocksteady Studios', (22.59, 9.025)),\n",
-       " ('Bungie', (13.38, 8.9)),\n",
-       " ('Turn 10 Studios', (12.120000000000001, 8.899999999999999)),\n",
-       " ('Rockstar San Diego', (22.27, 8.722222222222221)),\n",
-       " ('Dice', (17.32, 8.633333333333333)),\n",
-       " ('Harmonix Music Systems', (29.330000000000002, 8.544)),\n",
-       " ('EA Digital Illusions CE', (12.250000000000002, 8.48))]"
+       "[('Rockstar Games', (13.940, 9.800)),\n",
+       " ('Naughty Dog', (20.140, 9.083)),\n",
+       " ('Rockstar North', (99.570, 9.061)),\n",
+       " ('Rocksteady Studios', (22.590, 9.025)),\n",
+       " ('Bungie', (13.380, 8.900)),\n",
+       " ('Turn 10 Studios', (12.120, 8.900)),\n",
+       " ('Rockstar San Diego', (22.270, 8.722)),\n",
+       " ('Dice', (17.320, 8.633)),\n",
+       " ('Harmonix Music Systems', (29.330, 8.544)),\n",
+       " ('EA Digital Illusions CE', (12.250, 8.480))]"
       ]
      },
      "metadata": {},
@@ -420,7 +426,7 @@
     }
    ],
    "source": [
-    "def is_float(x):\n",
+    "def have_score(x):\n",
     "    try:\n",
     "        float(x[header['critic_score']])\n",
     "        return True\n",
@@ -442,7 +448,7 @@
     "\n",
     "\n",
     "MIN_SALES = 10\n",
-    "have_score = raw_data.filter(is_float) \\\n",
+    "have_score = raw_data.filter(have_score) \\\n",
     "    .map(lambda x: (x[header['developer']], (calc_total_sales(x), float(x[header['critic_score']]), 1))) \\\n",
     "    .reduceByKey(lambda list1, list2: tuple(a + b for a, b in zip(list1, list2))) \\\n",
     "    .mapValues(lambda x: (x[0], x[1]/x[2])) \\\n",
